--- a/localrc/nova.conf
+++ b/localrc/nova.conf
@@ -27,14 +27,29 @@
 # If the ``*_PASSWORD`` variables are not set here you will be prompted to enter
 # values for them by ``stack.sh`` and they will be added to ``local.conf``.
 ADMIN_PASSWORD=nomoresecrete
-MYSQL_PASSWORD=stackdb
+MYSQL_PASSWORD=hello
 RABBIT_PASSWORD=stackqueue
 SERVICE_PASSWORD=$ADMIN_PASSWORD
 SERVICE_TOKEN=nomoretoken
 
+disable_service n-net
+#disable_service n-obj
+#disable_service n-crt
+#disable_service n-cond
+#disable_service n-xvnc
+#disable_service n-cauth
 
-disable_all_services
-enable_service key mysql s-proxy s-object s-container s-account swift3
+enable_service q-svc
+enable_service q-agt
+enable_service q-dhcp
+enable_service q-l3
+enable_service q-meta
+enable_service neutron
+#  # Optional, to enable tempest configuration as part of devstack
+enable_service tempest
+
+Q_PLUGIN=openvswitch
+
 # ``HOST_IP`` should be set manually for best results if the NIC configuration
 # of the host is unusual, i.e. ``eth1`` has the default route but ``eth0`` is the
 # public interface.  It is auto-detected in ``stack.sh`` but often is indeterminate
@@ -42,9 +57,13 @@ enable_service key mysql s-proxy s-object s-container s-account swift3
 # the host. Setting it here also makes it available for ``openrc`` to include
 # when setting ``OS_AUTH_URL``.
 # ``HOST_IP`` is not set by default.
-#HOST_IP=w.x.y.z
-
-
+HOST_IP=10.90.0.120
+#PUBLIC_NETWORK_GATEWAY=192.168.0.1
+FLOATING_RANGE=10.90.0.0/23
+Q_FLOATING_ALLOCATION_POOL=start=10.90.0.121,end=10.90.0.130
+#FLAT_INTERFACE=eth0
+#FIXED_RANGE=10.254.1.0/24
+#NETWORK_GATEWAY=10.254.1.1
 # Logging
 # -------
 
@@ -75,6 +94,7 @@ LOGDAYS=2
 #NOVACLIENT_BRANCH=milestone-proposed
 #NEUTRON_BRANCH=milestone-proposed
 #SWIFT_BRANCH=milestone-proposed
+
 CINDER_BRANCH=stable/havana
 GLANCE_BRANCH=stable/havana
 HORIZON_BRANCH=stable/havana
@@ -84,7 +104,6 @@ NOVA_BRANCH=stable/havana
 NOVACLIENT_BRANCH=stable/havana
 NEUTRON_BRANCH=stable/havana
 SWIFT_BRANCH=stable/havana
-
 
 # Swift
 # -----
@@ -104,6 +123,3 @@ SWIFT_REPLICAS=1
 # moved by setting ``SWIFT_DATA_DIR``. The directory will be created
 # if it does not exist.
 SWIFT_DATA_DIR=$DEST/data
-SWIFT_LOOPBACK_DISK_SIZE=6G
-
-APACHE_ENABLED_SERVICES=swift,key
